--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,24 @@
   margin: 40px auto;
   padding: 20px;
 }
+
+.content .h1 {
+  margin-left: auto;
+}
+
+.emp-preview {
+  padding: 10px 16px;
+  margin: 20px 0;
+  height: 150px;
+  border-bottom: 2px solid #f0eeee;
+}
+
+.emp-preview:hover {
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+.emp-preview h2 {
+  font-size: 20px;
+  color: #63CAF2;
+  margin-bottom: 8px;
+}
